diag_to_dataframe converts a nested dict into a DataFrame of non-hv.ViewableElements.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180228 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180228 Prototyping.ipynb
@@ -166,7 +166,7 @@
     "            root_group[\"raw\"][str(pos)][0, 30], diagnostics=diag_pos[pos]\n",
     "        )\n",
     "    )\n",
-    "    for pos in tnrange(50)\n",
+    "    for pos in tnrange(100)\n",
     "}"
    ]
   },
@@ -176,7 +176,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = diag_to_dataframe(diag_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qgrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "none_pos = [k for k, v in trench_points_pos.items() if v is None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "none_pos"
    ]
   },
   {
@@ -214,15 +241,6 @@
     "    for k, v in diag_pos.items()\n",
     "    if k not in none_pos\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_plot_browser(diag_pos[8])"
    ]
   },
   {
@@ -271,15 +289,6 @@
    "source": [
     "plt.figure(figsize=(12, 12))\n",
     "plt.scatter(*zip(*rot_spacing.values()), s=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "none_pos"
    ]
   },
   {
