Plotting diagnostic information with hover. Finished qgrid plotting functions. DataFrame reformatting functions.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180306 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180306 Prototyping.ipynb
@@ -178,7 +178,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = diagnostics_to_dataframe(diag_pos)"
+    "df = diagnostics_to_dataframe(diag_pos, expand_labels=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = []\n",
+    "column_to_label_num = {}\n",
+    "column_to_flattened_name = {}\n",
+    "label_nums = set()\n",
+    "for column in df.columns:\n",
+    "    column_parts = column.split(\".\")\n",
+    "    if column_parts[0].startswith(\"label_\"):\n",
+    "        label_num = int(column_parts[0][6:])\n",
+    "        column_to_label_num[column] = label_num\n",
+    "        column_to_flattened_name[column] = \".\".join(column_parts[1:])\n",
+    "        label_nums.add(label_num)\n",
+    "for idx, row in df.iterrows():\n",
+    "    d = defaultdict(dict)\n",
+    "    for column in df.columns:\n",
+    "        if column in column_to_label_num:\n",
+    "            label_num = column_to_label_num[column]\n",
+    "            d[label_num][column_to_flattened_name[column]] = row[column]\n",
+    "        else:\n",
+    "            for label_num in label_nums:\n",
+    "                d[label_num][column] = row[column]\n",
+    "    data.extend(d.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_to_label_num"
    ]
   },
   {
@@ -264,29 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%html\n",
-    "<style>\n",
-    ".slick-header-column.ui-state-default {\n",
-    "    //height: 100%;\n",
-    "    height: 100px;\n",
-    "}\n",
-    ".slick-header-columns {\n",
-    "    //width: 10px;\n",
-    "    //white-space: pre !important;\n",
-    "    //height: 105px;\n",
-    "    //overflow-wrap: break-word;\n",
-    "}\n",
-    ".slick-column-name {\n",
-    "    width: 100px;\n",
-    "    overflow-wrap: break-word;\n",
-    "}\n",
-    ".slick-column-name {\n",
-    "    //white-space: normal;\n",
-    "}\n",
-    ".filter-button {\n",
-    "    height: 120px;\n",
-    "}\n",
-    "</style>"
+    "from holoviews.streams import Pipe"
    ]
   },
   {
@@ -295,7 +320,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qg.add_class(\"foobar\")"
+    "df[\n",
+    "    [\n",
+    "        \"label_1.trench_rotation.hough_2.angle (deg)\",\n",
+    "        \"label_1.trench_anchors.periodogram_2.period\",\n",
+    "    ]\n",
+    "]"
    ]
   },
   {
@@ -304,7 +334,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir(qg)"
+    "qgrid_stream = Pipe(data=df)\n",
+    "dmap = hv.DynamicMap(hhh_callback, streams=[qgrid_stream])\n",
+    "qg.observe(lambda , names=['_df'])"
    ]
   },
   {
