--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180307 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180307 Prototyping.ipynb
@@ -60,8 +60,7 @@
     "import tqdm\n",
     "from tqdm import tnrange, tqdm, tqdm_notebook\n",
     "from copy import copy, deepcopy\n",
-    "import warnings\n",
-    "import uuid"
+    "import warnings"
    ]
   },
   {
@@ -162,14 +161,23 @@
    "outputs": [],
    "source": [
     "diag_pos = tree()\n",
-    "trench_points_pos = {\n",
-    "    pos: fail_silently(\n",
+    "trench_points_pos = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pos in tnrange(50):\n",
+    "    res = fail_silently(\n",
     "        lambda: get_trenches(\n",
     "            root_group[\"raw\"][str(pos)][0, 30], diagnostics=diag_pos[pos]\n",
     "        )\n",
     "    )\n",
-    "    for pos in tnrange(100)\n",
-    "}"
+    "    if res:\n",
+    "        trench_points_pos[pos] = res"
    ]
   },
   {
@@ -187,20 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# qg = qgrid.QgridWidget(df=df)\n",
-    "qg = qgrid.show_grid(\n",
-    "    df,\n",
-    "    grid_options={\n",
-    "        \"forceFitColumns\": False,\n",
-    "        \"defaultColumnWidth\": 120,\n",
-    "        \"headerRowHeight\": 77,\n",
-    "        \"topPanelHeight\": 80,\n",
-    "        \"rowHeight\": 44,\n",
-    "        \"editable\": False,\n",
-    "        \"enableColumnReorder\": True,\n",
-    "    },\n",
-    "    precision=1,\n",
-    ")"
+    "df2 = expand_diagnostics_by_label(df)"
    ]
   },
   {
@@ -209,52 +204,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.core.display import HTML\n",
-    "\n",
-    "\n",
-    "def resize_qgrid_header(widget, height):\n",
-    "    widget_class = \"qgrid-{}\".format(uuid.uuid1())\n",
-    "    widget.add_class(widget_class)\n",
-    "    filter_height = height + 12  # TODO: why 12??\n",
-    "    css = \"\"\"\n",
-    "    <style>\n",
-    "    .{widget_class} .slick-header-column.ui-state-default {{\n",
-    "        height: {height}px;\n",
-    "    }}\n",
-    "    .{widget_class} .slick-column-name {{\n",
-    "        width: {height}px;\n",
-    "        overflow-wrap: break-word;\n",
-    "    }}\n",
-    "    .{widget_class} .slick-column-name {{\n",
-    "        white-space: normal;\n",
-    "    }}\n",
-    "    .{widget_class} .filter-button {{\n",
-    "        height: {filter_height}px;\n",
-    "    }}\n",
-    "    </style>\"\"\"\n",
-    "    display(\n",
-    "        HTML(\n",
-    "            css.format(\n",
-    "                widget_class=widget_class, height=height, filter_height=filter_height\n",
-    "            )\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "qg = qgrid.show_grid(\n",
-    "    df,\n",
-    "    grid_options={\n",
-    "        \"forceFitColumns\": False,\n",
-    "        \"defaultColumnWidth\": 120,\n",
-    "        \"headerRowHeight\": 77,\n",
-    "        \"topPanelHeight\": 80,\n",
-    "        \"rowHeight\": 44,\n",
-    "        \"editable\": False,\n",
-    "        \"enableColumnReorder\": True,\n",
-    "    },\n",
-    "    precision=1,\n",
-    ")\n",
-    "resize_qgrid_header(qg, 100)\n",
+    "df3 = drop_constant_columns(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qg = qshow(df3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "qg"
    ]
   },
@@ -264,29 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%html\n",
-    "<style>\n",
-    ".slick-header-column.ui-state-default {\n",
-    "    //height: 100%;\n",
-    "    height: 100px;\n",
-    "}\n",
-    ".slick-header-columns {\n",
-    "    //width: 10px;\n",
-    "    //white-space: pre !important;\n",
-    "    //height: 105px;\n",
-    "    //overflow-wrap: break-word;\n",
-    "}\n",
-    ".slick-column-name {\n",
-    "    width: 100px;\n",
-    "    overflow-wrap: break-word;\n",
-    "}\n",
-    ".slick-column-name {\n",
-    "    //white-space: normal;\n",
-    "}\n",
-    ".filter-button {\n",
-    "    height: 120px;\n",
-    "}\n",
-    "</style>"
+    "from holoviews.streams import Pipe\n",
+    "from bokeh.models import HoverTool"
    ]
   },
   {
@@ -295,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qg.add_class(\"foobar\")"
+    "df3"
    ]
   },
   {
@@ -304,7 +250,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir(qg)"
+    "hv.Points(df3.reset_index(), kdims=[f1, f2], vdims=[\"pos\", \"label\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1 = \"trench_rotation.hough_2.angle\"\n",
+    "f2 = \"trench_anchors.periodogram_2.period\"\n",
+    "\n",
+    "hover = HoverTool(\n",
+    "    tooltips=[\n",
+    "        (\"(pos,label)\", \"(@pos, @label)\"),\n",
+    "        (f1, \"@{{{}}}\".format(f1)),\n",
+    "        (f2, \"@{{{}}}\".format(f2)),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "hv.Points(df3.reset_index(), kdims=[f1, f2], vdims=[\"pos\", \"label\"]).opts(\n",
+    "    plot={\"size\": 50, \"tools\": [hover]}, style={\"size\": 5}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def \n",
+    "\n",
+    "qgrid_stream = Pipe(data=df)\n",
+    "dmap = hv.DynamicMap(plot_callback, streams=[qgrid_stream])\n",
+    "qg.observe(lambda x: qgrid_stream.send(data=x, names=['_df'])"
    ]
   },
   {
