--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180307 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180307 Prototyping.ipynb
@@ -289,12 +289,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "qg"
+    "# Trench detection debugging"
    ]
   },
   {
@@ -303,7 +301,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "none_pos = [k for k, v in trench_points_pos.items() if v is None]"
+    "f1 = \"trench_rotation.hough_2.angle\"\n",
+    "f2 = \"trench_anchors.periodogram_2.period\""
    ]
   },
   {
@@ -312,7 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "none_pos"
+    "good_detection = (df3[f1] > -1) & (df3[f2] > 20)\n",
+    "qshow(df3[~good_detection])"
    ]
   },
   {
@@ -321,92 +321,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "good_pos = [\n",
-    "    k\n",
-    "    for k, v in diag_pos.items()\n",
-    "    if trench_points_pos[k] is not None\n",
-    "    and -5 < v[\"label_1\"][\"trench_rotation\"][\"hough_2\"][\"angle (deg)\"] < 5\n",
-    "    and 21 < v[\"label_1\"][\"trench_anchors\"][\"periodogram_2\"][\"period\"] < 26\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(good_pos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rot = {\n",
-    "    k: v[\"label_1\"][\"trench_rotation\"][\"hough_2\"][\"angle (deg)\"]\n",
-    "    for k, v in diag_pos.items()\n",
-    "    if k not in none_pos\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spacings1 = {\n",
-    "    k: v[\"label_1\"][\"trench_anchors\"][\"periodogram_2\"][\"period\"]\n",
-    "    for k, v in diag_pos.items()\n",
-    "    if k not in none_pos\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist([v for v in spacings1.values() if v < 50], bins=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rot_spacing = {\n",
-    "    k: (\n",
-    "        v[\"label_1\"][\"trench_rotation\"][\"hough_2\"][\"angle (deg)\"],\n",
-    "        v[\"label_1\"][\"trench_anchors\"][\"periodogram_2\"][\"period\"],\n",
-    "    )\n",
-    "    for k, v in diag_pos.items()\n",
-    "    if k not in none_pos\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.scatter(*zip(*rot_spacing.values()), s=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = root_group[\"raw\"][str(8)][0, 30]"
+    "hover = HoverTool(\n",
+    "    tooltips=[\n",
+    "        (\"(pos,label)\", \"(@pos, @label)\"),\n",
+    "        (f1, \"@{{{}}}\".format(f1)),\n",
+    "        (f2, \"@{{{}}}\".format(f2)),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "hv.Points(df3.reset_index(), kdims=[f1, f2], vdims=[\"pos\", \"label\"]).opts(\n",
+    "    plot={\"size\": 50, \"tools\": [hover]}, style={\"size\": 5}\n",
+    ")"
    ]
   },
   {
@@ -417,7 +342,7 @@
    "source": [
     "%%time\n",
     "diag = tree()\n",
-    "get_trenches(root_group[\"raw\"][str(8)][0, 30], diagnostics=diag)"
+    "get_trenches(root_group[\"raw\"][str(7)][0, 30], diagnostics=diag)"
    ]
   },
   {
@@ -451,9 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Memory debugging"
    ]
@@ -461,9 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import cloudpickle"
@@ -472,9 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import resource\n",
@@ -485,9 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "resource?"
@@ -496,9 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "resource.getrusage(resource.RUSAGE_SELF)"
@@ -507,9 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import objgraph"
@@ -518,9 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "objgraph.most_common_types()"
@@ -529,9 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "len(b)"
@@ -540,9 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import gc\n",
@@ -553,9 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pympler import asizeof"
@@ -564,9 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "diag_pos[0][\"label_1\"][\"trench_ends\"].keys()"
@@ -575,9 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "c = cloudpickle.dumps(diag_pos[0][\"label_1\"][\"trench_ends\"])"
@@ -586,9 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"foo\", \"wb\") as f:\n",
@@ -598,9 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "len(c)"
@@ -609,9 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(asizeof.asized(diag_pos[0], detail=5).format())"
@@ -620,9 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%store -r"
@@ -631,9 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%store trench_points_pos\n",
