Added first cut of command to inventory image files in a given directory, dumping metadata and file info to a JSON file. Right now it seems to work, except DB writing segfaults.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180313 Metadata inventory.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180313 Metadata inventory.ipynb
@@ -9,7 +9,9 @@
     "import numpy as np\n",
     "import os\n",
     "from tinydb import TinyDB, Query\n",
-    "import nd2reader"
+    "import nd2reader\n",
+    "from collections import OrderedDict\n",
+    "from tqdm import tqdm_notebook, tnrange"
    ]
   },
   {
@@ -58,10 +60,33 @@
    "outputs": [],
    "source": [
     "search_dir = os.path.expanduser(\"~/scratch/fidelity\")\n",
-    "for root, dirs, files in os.walk(search_dir):\n",
+    "files_to_process = OrderedDict()\n",
+    "for root, dirs, files in tqdm_notebook(\n",
+    "    os.walk(search_dir), desc=\"scanning for image files\"\n",
+    "):\n",
     "    for file in files:\n",
-    "        if file.endswith(\".nd2\"):\n",
-    "            print(os.path.join(root, file))"
+    "        if file.endswith(\".nd2\") or file.endswith(\".tiff\"):\n",
+    "            path = os.path.join(root, file)\n",
+    "            files_to_process[path] = os.path.getsize(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files_to_process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file, size in tqdm_notebook(files_to_process.items()):\n",
+    "    print(size)"
    ]
   },
   {
@@ -511,8 +536,60 @@
     "for k, v in a.items():\n",
     "    if type(v) != zarr.core.Array:\n",
     "        print(k)\n",
-    "        display(v.info)"
+    "        print(len(str(v)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[\"image_metadata_sequence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = \"/home/jqs1/scratch/fidelity/171216/rt_test_tiff/t01c1.tif\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = Image.open(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.ifd.tagdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
